Fix card alignment

--- a/styles.css
+++ b/styles.css
@@ -109,8 +109,9 @@
     gap: 16px;
 }
 
-.cards info {
-    font-size: 18px;
+.cards .info {
+    font-size: 24px;
+    max-width: 300px;
 }
 
 .card {
@@ -122,8 +123,8 @@
 .card img{
     border: 4px solid #0f5e3f;
     border-radius: 25%;
-    max-height: 300px;
-    width: auto;
+    height: auto;
+    max-width: 300px;
 }
 
 a {
